# src/controllers/user.controller.js
@@ -1,0 +1,9 @@
+function createUserController({ userService }) {
+  return {
+    async getByUsername(req, res) {
+      res.json(await userService.getPublicProfile(req.validated.params.username));
+    },
+  };
+}
+
+module.exports = { createUserController };
